load(
    "@gz//tools/skylark:build_defs.bzl",
    "GZ_ROOT",
)

cc_test(
  name = "INTEGRATION_console",
  srcs = ["integration/console.cc"],
  deps = [
    GZ_ROOT + "common",
    GZ_ROOT + "common/testing",
    "@gtest//:gtest_main"
  ],
  env = {
    "GZ_BAZEL_PATH": "common",
  }
)

cc_test(
  name = "INTEGRATION_mesh",
  srcs = ["integration/mesh.cc"],
  deps = [
    GZ_ROOT + "common",
    GZ_ROOT + "common/graphics",
    GZ_ROOT + "common/testing",
    "@gtest//:gtest_main"
  ],
  data = ["data/box.dae", "data/box.obj", "data/box.mtl"],
  env = {
    "GZ_BAZEL_PATH": "common",
  }
)

exports_files(["data"])
